--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 8080
 DEV_MODE = development
-MONGO_URL = mongodb+srv://mansvi2003:hopethisworks@cluster0.mikpjcf.mongodb.net/
+MONGO_URL = mongodb+srv:/**************@cluster0.mikpjcf.mongodb.net/
